--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=MyMedic
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:1kBqRtIZqCGmNy/IjGHLiP0a7pD1hvKUnauuuBf/ESI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
